crates/test-files/fixtures/compile_errors/needs_mem_copy.fe
contract Foo:
    my_sto_array: u256[10]

    pub fn bar(self, my_array: u256[10]):
        my_array = self.my_sto_array

    pub fn foo(self) -> u256[10]:
        return self.my_sto_array
